--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore 
+      run: dotnet restore PROG6221/PROG6221.csproj
     - name: Build
-      run: dotnet build --no-restore
+      run: dotnet build  PROG6221/PROG6221.csproj --no-restore
     - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test  PROG6221/PROG6221.csproj --no-build --verbosity normal
